# siril-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  CI_TESTING.md  DISTRIBUTION.md  MANIFEST.in  Pipfile  README.md  WORKFLOWS.md  mcp-test-config.json  package-lock.json  package.json  pyproject.toml  release.sh  run-all-mcp-tests.sh  setup.cfg  simple-mcp-test.js  sync-version.js  test-mcp-integration.js  test-natural-language-scenarios.js  test-user-workflows.js  test_siril_detection.py  validate-ci-setup.js
.github/workflows/: ci.yml  format.yml  release-it.yml  release.yml  test-ci-setup.yml
siril_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
